BB-92: Rework /game/get-level/ parameter
